--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,9 @@
 [theme]
-primaryColor="#F63366"
+primaryColor="#F6F3EB"
 backgroundColor="#FFFFFF"
-secondaryBackgroundColor="#F0F2F6"
-textColor="#262730"
+secondaryBackgroundColor="#F6F3EB"
+textColor="#265237"
 font="serif"
+
+[custom]
+assistant_avatar=
